[package]
name = "kolla"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
env_logger = { version = "0.11.3", default-features = false }
log = "0.4.21"
serde = "1.0.197"
sha1 = "0.10.6"
tiny_http = "0.12.0"
tungstenite = { version = "0.21.0", default-features = false }
