[package]
name = "kolla"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["ws", "macros"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
anyhow = "1.0.81"
base64 = "0.22.0"
env_logger = { version = "0.11.3", default-features = false }
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
sha1 = "0.10.6"
tiny_http = "0.12.0"
tungstenite = { version = "0.21.0", default-features = false }
serde_json = "1.0.114"
futures-util = "0.3.30"
emojis = "0.6.1"
rand = "0.8.5"
once_cell = "1.19.0"
